Create main_title for landing page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <!-- link to our CSS template -->
-<link href="template.css" rel="stylesheet" type="text/css"?
+<link href="template.css" rel="stylesheet" type="text/css">
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -11,10 +11,19 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<!-- links to Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet" type="text/css">
+
 	<title>Weekend Cooks</title>
 
 </head>
 
 <body>
+
+<header>
+	<span id="main_title">
+		<h1>Weekend Cooks</h1>
+	</div>
+</header>
 
 </body>
