Created main title in desired font and added three nav bar sections (home, about, contact)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- links to Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet" type="text/css">
 
 	<title>Weekend Cooks</title>
 
@@ -21,9 +21,16 @@
 <body>
 
 <header>
-	<span id="main_title">
+	<div id="main_title">
 		<h1>Weekend Cooks</h1>
 	</div>
+	<div id="nav">
+		<a href='#home'> <font color="white"><b> Home </b></font></a>&nbsp; &nbsp; &nbsp; <a href='#about'><font color="white"><b> About Us </b></font></a> &nbsp; &nbsp; &nbsp; <a href='#contact'><font color="white"><b> Contact </b></font></a>
+	</div>
 </header>
+
+<div id="coming_soon">
+	<div id="content">Coming soon!</div>
+</div>
 
 </body>
