First post overview with pic
Uploading roti jala image with summary post

--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
 	</div>
 </header>
 
+<div id="post">
+	<br>
+	<div id="post_one" class="greydout">
+	<div class="row">
+		<div class="col-md-3"><img src="roti_jala_batter.jpg" alt="roti_image" style="width:200px;height:160px;" class="img-rounded"></div>
+		<div class="col-md-9">
+			<h3>Tomato Roti Jala</h3>
+			<p>
+			Roti jala (“net bread”) is a lacy pancake traditionally served during Eid (Hari Raya) in Malaysia. Traditionally turmeric is added to turn the batter a distinctive yellow colour. But today we decided to put our own twist on it – we created tomato roti jala.</p> 
+			<p>Best served with curries containing lots of gravy.</p>
+		</div>
+	</div>
+	</div>
+	<br>
+</div>
+
 <div id="coming_soon">
 	<div id="content">Coming soon!</div>
 </div>
